# github-roadmap-generator

./: .gitignore  CLAUDE.md  README.md  REFACTOR_PLAN.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 7ad30fba1938_initial_tables.py
backend/app/: main.py
backend/app/api/: roadmap.py
backend/app/core/: config.py  database.py  logging.py  redis.py
backend/app/models/: __init__.py  roadmap.py
backend/app/schemas/: roadmap.py
backend/app/services/: cache.py  github.py  llm.py
backend/tests/: conftest.py  test_api.py  test_cache.py  test_github.py  test_integration.py  test_llm.py
docs/superpowers/plans/: 2026-05-21-projectpath.md
docs/superpowers/specs/: 2026-05-21-projectpath-design.md
frontend/: .eslintrc.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: roadmap.ts
frontend/src/components/: ErrorBoundary.tsx  ExportButton.tsx  FavoriteButton.tsx  LoadingScreen.tsx  MindMapView.tsx  ProgressBar.tsx  ProjectInput.tsx  TimelineView.tsx  ViewSwitcher.tsx
frontend/src/hooks/: useRoadmap.ts
frontend/src/pages/: GeneratingPage.tsx  HistoryPage.tsx  HomePage.tsx  RoadmapPage.tsx  TrendsPage.tsx
frontend/src/stores/: useFavoritesStore.ts  useHistoryStore.ts  useProgressStore.ts
frontend/src/types/: roadmap.ts
frontend/src/utils/: favorites.ts  history.ts  progress.ts  share.ts
